tooling/nargo_cli/tests/snapshots/execute__tests__struct_array_inputs_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "14467358168951839234",
  "abi": {
    "parameters": [
      {
        "name": "foos",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "bar",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "baz",
                "type": {
                  "kind": "field"
                }
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VWwU7DMAx1urRbO01DcEHiBlyRWtq1O+7Aib8ITP2OfDqNsKnrBiQgmVRLkZ3YsZ9de4uCT8qGpVDWyBXjGUyJdCfk5f+oCuirjIVRLQBjsgCMqwVg1AvAmAbESNgcZTMBwbvmch/PFScVOp+9oxp5jjxh+oCNUOUibkj/x7J5y2FKgfHXOatxBP9tznxG8F+u0c+LHf3LXKgPFET7Tk3kPNudyA1YLhRbx4ndKREPRJ4g4hcQtacqJeIRHlkfkndkY0c8Sui0nedButRO83C0GdYts5O9lTC7ByY/Ct+vdo4p5kwOvWoi92p1A9/PIeW4tvBFpFuxM6o51WnD7YUuZzptp3EK3GsWh/siHKmwv8f9HnnG7tD9K0/8TMSf4Pac8RpJXyvPGdm7/7w7lLe4XH890R2IOoOHn2bQNwd7mPeBvgzWljClv8TKf0/lu0OJvS+vLYzvD23D59YdxwcUzUTKsHDSTM/tn3FfMPw8j9Mfcfadqfra9OZgzufm3VwL/44SVqcP9DL9dBEOAAA=",
  "debug_symbols": "lZHBCoMwDIbfJeceWls39VXGkKpRCqWVWgdDfPelY4duh0EvIX/4wh/yHzDhsC+9cbPfoLsdYP2oo/GO1HEyGIKx1ix9Pgaeiry++W3VLskt6hChawUDdBM1DW3PxiJ0NT/vDGRTyLdlvOKFvCjkq0Je/uWFuHwtnKQeOhg9WPz8ft7dmEURnyv+pLIGP+K0B0z5ZNGQc6WYVHSGSG9RNas5WZDNCw==",
  "file_map": {
    "50": {
      "source": "struct Foo {\n    bar: Field,\n    baz: Field,\n}\n\nfn main(foos: [Foo; 3]) -> pub Field {\n    foos[2].bar + foos[2].baz\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/struct_array_inputs/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
