tooling/nargo_cli/tests/snapshots/execute__tests__struct_fields_ordering_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17875088138766870232",
  "abi": {
    "parameters": [
      {
        "name": "y",
        "type": {
          "kind": "struct",
          "path": "myStruct",
          "fields": [
            {
              "name": "foo",
              "type": {
                "kind": "integer",
                "sign": "unsigned",
                "width": 32
              }
            },
            {
              "name": "bar",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7WQuw2AMAxECWIgO7aJ3bEKAbP/CPxSIEgHPOl03enpQnMStrTNk1B6KA3vwOsWQc/sKToSjhAtqwBL7hUVRWWOSuTKmixbAkMmx0WMfDmY/vQM33mO+1Z3+7WtuNdYAQIz7LKgAQAA",
  "debug_symbols": "bY1bCsMgFET3cr/zoYYS6lZKCT7DBVHxUSiSvdeECin088xwZhpoI+u2orchA380cEGJgsF3akDOKEfhD8pFpAKc3ucJjNfAGZn3CSw6A/xG9ucE9J/A6DIEtvwIHWRC53Bbr789fomEQjrzRVu9urTlHUcz/JiCMromcyydXZ//AA==",
  "file_map": {
    "50": {
      "source": "// Note that fields are not in alphabetical order.\n// We want to check that this ordering is maintained\nstruct myStruct {\n    foo: u32,\n    bar: Field,\n}\n\nfn main(y: pub myStruct) {\n    assert(y.foo == 5);\n    assert(y.bar == 7);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/struct_fields_ordering/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
