tooling/nargo_cli/tests/snapshots/execute__tests__struct_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17318916517956759996",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ6CMAztBKLT6EG96EU/YQgKRw76IYuE7+DTDbENpcBFuyZkI93ee33dZuAbBr8uYhwXMA5aU+Ho/otUEcuF1GkC6RyYbGA+KHfF0Yr9XT5SLNgKXk380uUPO1Gfov7MMswA+DfCj8PguyXiPNshPgjeLQwvL99DOX7GXphbYZ7mO5xbgRei71yTtm+HCf3EtcFaz6LWiPmjpUP2KYFxD43I0dqj0JcE8mrPcEFwyXOg6E0KwosE5nsmfTsJfaHu35Q3xLWB/v2NW33+onSOeKO294GfUxD8iVh/wf/1TB3VjzqbwqdN5ht/93Wdv730qQt+3z6qg4/CYQgAAA==",
  "debug_symbols": "ldLBCoQgEAbgd5mzh7Rsq1dZlrCaQhANs4UlevfVZRck9jIX8Re/OQz/ARMO+9JrO7sNuvsBxo0qaGdjOk4Gg9fG6KXPn6FIB5ef/9uqbIpbUD5A11YlA7RTvEkZ/awNQieL88GA12RxI4uGLFqqEMVfUbc/0Yir4GQhyKIki4omzpieyms1GPzWY97tmLUlvFa8FGf1bsRp95gqlLUn7VDUrORxbBz9Bg==",
  "file_map": {
    "50": {
      "source": "struct Foo {\n    bar: Field,\n    array: [Field; 2],\n}\n\nstruct Pair {\n    first: Foo,\n    second: Field,\n}\n\nimpl Foo {\n    fn default(x: Field, y: Field) -> Self {\n        Self { bar: 0, array: [x, y] }\n    }\n}\n\nimpl Pair {\n    fn foo(p: Self) -> Foo {\n        p.first\n    }\n\n    fn bar(self) -> Field {\n        self.foo().bar\n    }\n}\n\nstruct Nested {\n    a: Field,\n    b: Field,\n}\nstruct MyStruct {\n    my_bool: bool,\n    my_int: u32,\n    my_nest: Nested,\n}\nfn test_struct_in_tuple(a_bool: bool, x: Field, y: Field) -> (MyStruct, bool) {\n    let my_struct = MyStruct { my_bool: a_bool, my_int: 5, my_nest: Nested { a: x, b: y } };\n    (my_struct, a_bool)\n}\n\nstruct Animal {\n    legs: Field,\n    eyes: u8,\n}\n\nfn get_dog() -> Animal {\n    let dog = Animal { legs: 4, eyes: 2 };\n    dog\n}\n\nstruct Unit;\n\nfn main(x: Field, y: Field) {\n    let unit = Unit {};\n\n    let first = Foo::default(x, y);\n    let p = Pair { first, second: 1 };\n\n    assert(p.bar() == x);\n    assert(p.second == y);\n    assert(p.first.array[0] != p.first.array[1]);\n    // Nested structs\n    let (struct_from_tuple, a_bool) = test_struct_in_tuple(true, x, y);\n    assert(struct_from_tuple.my_bool == true);\n    assert(a_bool == true);\n    assert(struct_from_tuple.my_int == 5);\n    assert(struct_from_tuple.my_nest.a == 0);\n    // Regression test for issue #670\n    let Animal { legs, eyes } = get_dog();\n    let six = legs + eyes as Field;\n\n    assert(six == 6);\n\n    let Animal { legs: _, eyes: _ } = get_dog();\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/struct/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
